# lexandyacc

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  Makefile.mgl  README.md  ape-05.l  ape-05.sh  ape-06.l  ape-06.sh  ch1-01.l  ch1-02.l  ch1-03.l  ch1-04.l  ch1-04.ll  ch1-04.txt  ch1-05.l  ch1-05.txt  ch1-05.y  ch1-06.l  ch1-06.txt  ch1-06.y  ch2-01.l  ch2-01.sh  ch2-02.l  ch2-02.sh  ch2-03.l  ch2-03.sh  ch2-04.l  ch2-04.sh  ch2-05.l  ch2-06.l  ch2-07.l  ch2-07.sh  ch2-08.l  ch2-09.l  ch2-09.sh  ch3-01.l  ch3-01.sh  (+34 more)
